--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <version>2.9.1</version>
         </dependency>
 
+        <!-- for test only -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
