--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           $PADDLEOCR_JSON_TEST_IMG_PATH = "$(pwd)\res\test.png"
           echo "PADDLEOCR_JSON_EXE_PATH=$PADDLEOCR_JSON_EXE_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "PADDLEOCR_JSON_TEST_IMG_PATH=$PADDLEOCR_JSON_TEST_IMG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        shell: powershell
+        shell: pwsh
 
       - name: Run tests
         run: mvn -B test
